# baker-street

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  PLUGINS.md  README.md  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spawn-teams.md
.claude/: settings.json
.claude/agents/: verifier.md
.code-review/: config.json
.github/workflows/: ci.yml  publish-core.yml  release.yml
docs/: architecture-review.md  brain-nats-workers.md  enterprise-overview.md  executive-summary-architecture-v2.md  executive-summary-tech-v2.md  extensions.md  gary@192.168.4.65  how-to-run-teams-in-claude-code.md  implement-plan-job-type.md  installer-text.md  observational-memory-implementation.md  overview.md  phase-1-report.md  sample-team-prompt.md
docs/code-reviews/: 2026-02-16-team-model-router.md  2026-02-19-feature-flags.md
docs/plans/: 2026-02-23-utilities-extension-design.md  2026-02-28-rust-installer.md  (+23 more)
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  secrets.yaml.example
operating_system/: BRAIN.md  SOUL.md
scripts/: Deploy-BakerStreet.ps1  backup.sh  bootstrap.sh  build.sh  bundle-template.sh  cli.mts  deploy-all.sh  deploy.bat  deploy.sh  e2e-test.sh  generate-manifest.mjs  generate-manifest.sh  install.sh  release.sh  restore.sh  secrets.sh  test-sysadmin.mjs  upgrade.sh
tools/installer/: Cargo.toml  Makefile  install.sh  release-manifest.json
tools/installer/src/: app.rs  brain_client.rs  chat_app.rs  chat_tui.rs  cli.rs  cmd_chat.rs  cmd_install.rs  cmd_status.rs  cmd_uninstall.rs  cmd_update.rs  config_file.rs  config_schema.rs  deploy.rs  fetcher.rs  graphics.rs  health.rs  images.rs  interview.rs  k8s.rs  lib.rs  main.rs  manifest.rs  meta.rs  templates.rs  theme.rs  tui.rs  validation.rs  verify.rs
tools/installer/src/os_files/: BRAIN.md  SOUL.md  WORKER.md  prompts.json
tools/installer/src/templates/: brain.yaml  browser.yaml  gateway.yaml  nats.yaml  network-policies.yaml  pvcs.yaml  qdrant.yaml  rbac.yaml  sysadmin.yaml  toolbox.yaml  ui.yaml  voice.yaml  worker.yaml
tools/installer/tests/: config_file.rs  config_schema_test.rs  integration.rs  manifest_test.rs  validation_test.rs
tools/installer/tests/e2e/: full.yaml  minimal.yaml
(+285 files in other folders)
