[package]
name = "bakerst-install"
version = "0.1.0"
edition = "2021"
description = "Baker Street Kubernetes installer"
license = "MIT"

[[bin]]
name = "bakerst-install"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Kubernetes
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Date/time
chrono = "0.4"

# Utilities
anyhow = "1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
open = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
