[package]
name = "bakerst-install"
version = "0.3.0"
edition = "2021"
description = "Baker Street Kubernetes installer"
license = "MIT"

[[bin]]
name = "bakerst-install"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Kubernetes
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP / Downloads
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
indicatif = "0.17"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
hex = "0.4"
getrandom = "0.2"
base64 = "0.22"
open = "5"
dirs = "5"
regex = "1"
tempfile = "3"
cli-clipboard = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
